# EmailLLM

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  test_logger.py
app/: config.py  idle_listener.py  mail_fetcher.py  mail_poller.py  mail_processor.py  mail_sender.py  main.py
app/utils/: logger.py
scripts/: LLM_check.py  health_check.py
tests/: test_email_filter.py  test_email_forwarder.py
